Various updates (not very specific, I know)

--- a/Lounge/Lounge.csproj
+++ b/Lounge/Lounge.csproj
@@ -169,7 +169,7 @@
     <Resource Include="Assets\playlist.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Resource Include="Assets\info.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
