Update settings to save user preferences

--- a/Lounge/App.config
+++ b/Lounge/App.config
@@ -13,6 +13,15 @@
             <setting name="AudioDevice" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PrimaryMonitor" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ArdunioLEDs" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LoopAudio" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Lounge.Properties.Settings>
     </userSettings>
 </configuration>
