--- a/Lounge/Lounge.csproj
+++ b/Lounge/Lounge.csproj
@@ -171,6 +171,9 @@
   <ItemGroup>
     <Resource Include="Assets\info.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\save.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
